test/bad/functions/call5.px

if true do
    func h() def
        return

return h()
